welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: value toIn is not a member of String
		val decalage = litMessage().toIn
                                            ^Array2:20: error: value unary_! is not a member of Int
		while(!comp == getMondeHauteur - 1) {
                      ^